--- a/attendance/templates/index.html
+++ b/attendance/templates/index.html
@@ -1,22 +1,12 @@
+{% extends 'base.html' %}
+
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Attendance</title>
-    <!-- Testing Website Icon -->
-    <link rel="icon" href="{% static 'img/profile.png' %}" />
-    <!-- Testing Custom Css -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-</head>
-
-<body>
     <!-- Checking Templates  -->
     <h1>This is Working</h1>
     <small>Testing</small>
-</body>
+    <a class="btn btn-success" href="{% url 'login' %}">Login</a>
 
-</html>
+{% endblock %}
