--- a/attendance/templates/registration/password_change_form.html
+++ b/attendance/templates/registration/password_change_form.html
@@ -10,7 +10,7 @@
 			<form class="form" method="POST">
 				{% csrf_token %}
 				{{ form|crispy }}
-				<input type="submit" value="Change My Password" class="btn btn-slateblue">
+				<input type="submit" value="Change My Password" class="btn btn-success">
 			</form>
 		</div>
 	</div>
