Implemented Layout 1 [Theme 1]
+ added new package : django-livereload-server
+ updated css style [colors + font]
+ updated base [new fonts + header + footer]
+ updated footer [sample]
+ updated header [moved login + logout here]
+ updated requirements

--- a/attendance/static/css/style.css
+++ b/attendance/static/css/style.css
@@ -1,4 +1,34 @@
-/* Testing weather static css working or not  */
 body {
-    background-color:#fff098 !important ;
+    background-color:#daeaf6;
+    font-family: 'Karla', sans-serif !important;
+}
+
+/* Font Family */
+
+.karla {
+    font-family: 'Karla', sans-serif;
+}
+
+.arvo {
+    font-family: 'Arvo', serif;
+}
+
+/* Colors */
+
+/* Background Colors */
+.bg_d_blue {
+    background-color: #062743;
+}
+
+.bg_l_bluish_white {
+    background-color: #daeaf6;
+}
+
+/* Text Colors */
+.text_d_blue{
+    color: #062743;
+}
+
+.text_l_bluish_white{
+    color: #daeaf6 !important;
 }
