--- a/attendance/templates/index.html
+++ b/attendance/templates/index.html
@@ -2,12 +2,14 @@
 
 {% load static %}
 
+{% block title %}
+<title>SAMS</title>
+{% endblock %}
+
 {% block content %}
 
     <!-- Checking Templates  -->
     <h1>This is Working</h1>
     <small>Testing</small>
-    <a class="btn btn-success" href="{% url 'login' %}">Login</a>
-    <a class="btn btn-success" href="{% url 'logout' %}">Logout</a>
 
 {% endblock %}
