--- a/attendance/templates/base.html
+++ b/attendance/templates/base.html
@@ -3,36 +3,42 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>SAMS</title>
-    <meta charset="utf-8">
-    <meta name="theme-color" content="#5e35B1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Not yet deccided">
-    <link rel="icon" type="img/png" href="{% static 'img/profile.png' %}">
-    <!-- Jquery Complete -->
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <!-- animate css -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" /> -->
-    <!-- Google Fonts -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Sansita+Swashed&family=Varela+Round&display=swap" rel="stylesheet"> -->
-    <!-- Custom Css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  {% block title %}
+  {% endblock %}
+  <meta charset="utf-8">
+  <meta name="theme-color" content="#5e35B1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Student Attendance Management System">
+  <link rel="icon" type="img/png" href="{% static 'img/profile.png' %}">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- Popper JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <!-- Bootstrap JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <!-- Jquery Complete -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <!-- animate css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
+  <!-- Google Fonts : Karla + Arvo -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Karla&display=swap" rel="stylesheet">
+  <!-- Custom Css -->
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
   {% block head %}
   {% endblock %}
 </head>
+
 <body>
   <header>
     <!-- Navbar -->
+    {% include 'header.html' %}
   </header>
 
   <main>
@@ -41,8 +47,10 @@
 
     {% include 'messages.html' %}
   </main>
-    <footer>
-      <!-- footer -->
-    </footer>
+  <footer>
+    <!-- Footer -->
+    {% include 'footer.html' %}
+  </footer>
 </body>
+
 </html>
