--- a/attendance/templates/footer.html
+++ b/attendance/templates/footer.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="row mx-0 text-center bg_d_blue">
+<div class="row mx-0 mt-5 text-center bg_d_blue">
     <div class="col-12 col-md my-3">
         <img class="mb-2" src="{% static 'img/profile.png' %}" alt="" width="20" height="20">
         <small class="d-block text_l_bluish_white">You will know soon</small>
