--- a/attendance/templates/header.html
+++ b/attendance/templates/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<nav class="navbar navbar-expand-lg bg_d_blue">
+<nav class="navbar navbar-expand-lg bg_d_blue mb-5" style="z-index: 1100;">
     <div class="container-fluid justify-content-between">
         <!-- * Brand Logo -->
         <a class="navbar-brand d-flex" href="{% url 'homepage' %}" style="min-width: 7rem"><img
