--- a/attendance/templates/attendance/classes.html
+++ b/attendance/templates/attendance/classes.html
@@ -9,8 +9,8 @@
     {% if classes %}
         {% for class in classes %}
             <ul>
-                <li>{{class.hour}}</li>
-                <li>{{class.subject}}</li>
+                <li>{{class.hour}} hour</li>
+                <li>{{class.subject.sub_name}}</li>
                 <li>{{class.set_name.classroom.get_year_display}} {{class.set_name.classroom.course}} {{class.set_name.classroom.sec|upper}}</li>
             </ul>
 
