--- a/attendance/templates/classroom/ClassRoom.html
+++ b/attendance/templates/classroom/ClassRoom.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="row my-4">
             <div class="col-2">
-                <button id="create-class-button" type="button" data-toggle="modal" data-target="#create-class-modal" data-backdrop="static" class="btn btn-primary shadow-lg pl-3 pr-4" style="border-radius:30px"><h4>+   <small style="font-weight:500">   Create</small></h4></button>
+                <button type="button" data-toggle="modal" data-target="#create-class-modal" data-backdrop="static" class="btn btn-primary shadow-lg pl-3 pr-4" style="border-radius:30px"><h4>+   <small style="font-weight:500">   Create</small></h4></button>
             </div>
             <div class="col-8">
             <div class="input-group" style="box-shadow: 4px 4px 20px 0 rgba(0, 0, 0, 0.2), 4px 4px 20px 0 rgba(0, 0, 0, 0.19);height:45px">
@@ -81,7 +81,7 @@
                         <p>{{class.sec}}</p>
                     </div>
                     <button type="button" class="btn btn-danger float-right m-2">Delete</button>
-                    <button type="button" class="btn btn-info float-right m-2 edit-button">Edit</button>
+                    <a href="{% url 'classroom:editclass' class.id %}" class="btn btn-info">View</a>
                 </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                             {{form.tutor}}
                         </div>
                         <input type="submit" class="btn btn-success float-right mx-2">
-                        <button type="button" class="btn btn-danger float-right" id="close-modal-button">Back</button>
+                        <a href="{% url 'classroom:createclass' %}" class="btn btn-secondary float-right">Cancel</button>
                     </form>
                 </div>
             </div>
@@ -130,9 +130,10 @@
         $(document).ready(function(){
             $("#delete-more").tooltip();
             $(".toast").toast({delay:2000}).toast({autohide:false}).toast('show');
-
+           
             var errors="{{errors}}";
             if(errors.length!=0){
+                $("#create-class-modal").modal({backdrop:'static'});
                 $("#create-class-modal").modal('show');
             }
             $(".class-check").change(function(){
@@ -170,20 +171,11 @@
                 }
             });
 
-            $("#close-modal-button").click(function(){
-                $("#create-class-modal").modal('hide');
-            });
-
             $("#search-class").keyup(function(){
                 var value=$(this).val().toLowerCase()
                 $(".cards").filter(function(){
                     $(this).parent().toggle( $(this).text().toLowerCase().indexOf(value) > -1)
                 });
-            });
-            
-            $("#create-class-button").click(function(){
-                $(".identify").val(" ");
-                $(".errorlist").addClass("d-none");
             });
         });
     </script>
