Improved Sidebar and Navbar (Top)
Side Bar :
1) Now All icon will be animated in side bar (while hivering)
2) Added Login & LogOut Button

Nav bar (top) :
1) New Logo applied.
2) This navbar is now responsive
3) Hamburger button added (not in working stage)
4) Notification icon added.
5) UI changed.

+ New Logo (temp)
+ Added style.scss file.
+ Updated gitignore.

--- a/attendance/templates/footer.html
+++ b/attendance/templates/footer.html
@@ -2,8 +2,8 @@
 
 <div class="row mx-0 mt-5 text-center bg_d_blue">
     <div class="col-12 col-md my-3">
-        <img class="mb-2" src="{% static 'img/profile.png' %}" alt="" width="20" height="20">
-        <small class="d-block text_l_bluish_white">You will know soon</small>
+        <img class="mb-2 rounded-circle" src=" {% static 'img/logo.jpg' %}" alt="" width="20" height="20">
+        <small class="d-block text_l_bluish_white">SAMS</small>
         <small class="d-block mb-3 text_l_bluish_white">©2020</small>
     </div>
     <div class="col-12 col-md mt-3 text_l_bluish_white">
