--- a/attendance/static/css/style.css
+++ b/attendance/static/css/style.css
@@ -31,7 +31,45 @@ body {
   color: #daeaf6 !important;
 }
 
+/* Font Style */
+.upper_case {
+  text-transform: uppercase;
+}
+
+.capitalize {
+  text-transform: capitalize;
+}
+
+/* Customizing Bootstrap */
+.nav-link {
+  color: #062743;
+}
+
+/* Custom Button */
+/* Mainly for Hamburger Button */
+.btn-cust {
+  color: #062743;
+  transition: all 0.4s;
+}
+.btn-cust:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+.btn-cust:active {
+  outline: none !important;
+}
+
 /* Main Content */
+.neu_icon {
+  transition: all 0.4s;
+  box-shadow: 5px 5px 10px #c2d0db, -5px -5px 10px #e5f6ff;
+}
+.neu_icon:hover {
+  color: #062743;
+  font-size: 1.05rem;
+  box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #e5f6ff;
+}
+
 .max_95 {
   max-width: 95%;
 }
@@ -42,7 +80,7 @@ body {
   border: 0;
   background-color: #daeaf6;
   border-radius: 2rem !important;
-  box-shadow: 18px 18px 40px #aebbc5, -18px -18px 40px #ffffff;
+  box-shadow: 8px 8px 20px #aebbc5, -8px -8px 20px #ffffff;
 }
 #left_side_bar .side_bar .side_bar_title {
   padding: 12px 0px 5px 50px;
@@ -73,7 +111,7 @@ body {
   background-color: #062743;
   color: #fff !important;
   fill: #fff !important;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
 }
 #left_side_bar .side_bar .list-group :active {
   background-color: #062743;
