--- a/attendance/templates/base.html
+++ b/attendance/templates/base.html
@@ -116,7 +116,7 @@
               </a>
             </li>
             <li class="list-group">
-              <a href="#" class="side_bar_link fill_d_blue">
+              <a href="{% url 'attendance:classes' %}" class="side_bar_link fill_d_blue">
                 <svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="ballot-check" role="img"
                   xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 448 512" class="mr-2">
                   <path fill="currentColor"
@@ -127,7 +127,7 @@
               </a>
             </li>
             <li class="list-group">
-              <a href="#" class="side_bar_link fill_d_blue">
+              <a href="{% url 'classroom:createclass' %}" class="side_bar_link fill_d_blue">
                 <svg aria-hidden=" true" focusable="false" data-prefix="fas" data-icon="users-class" role="img"
                   xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 640 512" class="mr-2">
                   <path fill="currentColor"
@@ -138,7 +138,7 @@
               </a>
             </li>
             <li class="list-group">
-              <a href="#" class="side_bar_link fill_d_blue">
+              <a href="{% url 'subject_list' %}" class="side_bar_link fill_d_blue">
                 <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="book-open" role="img"
                   xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 576 512" class="mr-2">
                   <path fill="currentColor"
