Added app_name to all app urls.py
specifying app_name to url.py, so we have to mention app_name:urls_name in all html file.

Changed attendance app_name to 'attendancess'.

--- a/attendance/templates/subject/subject_list.html
+++ b/attendance/templates/subject/subject_list.html
@@ -13,7 +13,7 @@
 				<div>Sub Name : {{ sub.sub_name }}</div>
 				<div>Staff Name : {{ sub.handled_by.username }}</div>
 				<div>Classroom : {{ sub.classroom.course }}</div>
-				<a href="{% url 'subject_detail' sub.id %}" class="stretched-link"></a>
+				<a href="{% url 'subject:subject_detail' sub.id %}" class="stretched-link"></a>
 			</div>
 		</div>
 		{% endfor %}
