--- a/attendance/templates/base.html
+++ b/attendance/templates/base.html
@@ -54,7 +54,7 @@
               <li class="side_bar_title list-group mt-3">Account</li>
               {% if user.is_authenticated %}
               <li class="list-group">
-                <a href="{% url 'logout' %}" class="side_bar_link fill_d_blue">
+                <a href="{% url 'user_module:logout' %}" class="side_bar_link fill_d_blue">
                   <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="home" role="img"
                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" width="1.2em" height="1.2em" class="mr-2">
                     <path fill="currentColor"
@@ -66,7 +66,7 @@
               </li>
               {% else %}
               <li class="list-group">
-                <a href="{% url 'login' %}" class="side_bar_link fill_d_blue">
+                <a href="{% url 'user_module:login' %}" class="side_bar_link fill_d_blue">
                   <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="home" role="img"
                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" width="1.2em" height="1.2em" class="mr-2">
                     <path fill="currentColor"
@@ -116,7 +116,7 @@
               </a>
             </li>
             <li class="list-group">
-              <a href="{% url 'attendance:classes' %}" class="side_bar_link fill_d_blue">
+              <a href="{% url 'attendancess:classes' %}" class="side_bar_link fill_d_blue">
                 <svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="ballot-check" role="img"
                   xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 448 512" class="mr-2">
                   <path fill="currentColor"
@@ -138,7 +138,7 @@
               </a>
             </li>
             <li class="list-group">
-              <a href="{% url 'subject_list' %}" class="side_bar_link fill_d_blue">
+              <a href="{% url 'subject:subject_list' %}" class="side_bar_link fill_d_blue">
                 <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="book-open" role="img"
                   xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 576 512" class="mr-2">
                   <path fill="currentColor"
