--- a/attendance/templates/header.html
+++ b/attendance/templates/header.html
@@ -29,7 +29,7 @@
                     </div>
                 </a>
                 <a class="nav-link text_d_blue rounded-pill neu_icon mr-2 d-none d-md-block"
-                    href="{% url 'logout' %}">Logout
+                    href="{% url 'user_module:logout' %}">Logout
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="home" role="img"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" width="1.2em" height="1.2em">
                         <path fill="currentColor"
@@ -39,7 +39,7 @@
                 </a>
                 {% else %}
                 <a class="nav-link text_d_blue rounded-pill neu_icon mr-2 d-none d-md-block"
-                    href="{% url 'login' %}">Login
+                    href="{% url 'user_module:login' %}">Login
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="home" role="img"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" width="1.2em" height="1.2em">
                         <path fill="currentColor"
