--- a/attendance/templates/attendancess/classes.html
+++ b/attendance/templates/attendancess/classes.html
@@ -2,16 +2,16 @@
 
 {% block content %}
     <h4>Hello world</h4>
-    <form action={% url 'attendance:classes' %}>
+    <form action={% url 'attendancess:classes' %}>
         <input type="date" value={{date}} name="date">
         <input type="submit" value="Go">
     </form>
     {% if classes %}
         {% for class in classes %}
             <div class="card">
-                <div class="card-body">                
+                <div class="card-body">             
                     <p>{{class.hour}} hour</p>
-                    <a href="{% url 'attendance:attendance' class.subject.id %}" class="card-link"><p>{{class.subject.sub_name}}</p></a>
+                    <a href="{% url 'attendancess:attendance' class.subject.id %}" class="card-link"><p>{{class.subject.sub_name}}</p></a>
                     <p>{{class.set_name.classroom.get_year_display}} {{class.set_name.classroom.course}} {{class.set_name.classroom.sec|upper}}</p>
                 </div>
             </div>
