--- a/attendance/templates/header.html
+++ b/attendance/templates/header.html
@@ -50,7 +50,7 @@
                 {% endif %}
                 <!-- * Hamburger Button-->
                 <button class="navbar-toggler collapsed btn-cust btn" type="button" data-toggle="collapse"
-                    data-target="#navbarCollapse" aria-expanded="false">
+                    data-target="#navbarCollapse" aria-expanded="false" id="btn_ham">
                     <i class="fas fa-bars fa-lg"></i>
                 </button>
             </section>
