--- a/attendance/static/css/style.css
+++ b/attendance/static/css/style.css
@@ -1,15 +1,15 @@
 body {
   background-color: #daeaf6;
-  font-family: "Karla", sans-serif !important;
+  font-family: 'Karla', sans-serif !important;
 }
 
 /* Font Family */
 .karla {
-  font-family: "Karla", sans-serif;
+  font-family: 'Karla', sans-serif;
 }
 
 .arvo {
-  font-family: "Arvo", serif;
+  font-family: 'Arvo', serif;
 }
 
 /* Colors */
@@ -49,25 +49,33 @@ body {
 /* Mainly for Hamburger Button */
 .btn-cust {
   color: #062743;
+  -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
+
 .btn-cust:focus {
   outline: none !important;
-  box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
 }
+
 .btn-cust:active {
   outline: none !important;
 }
 
 /* Main Content */
 .neu_icon {
+  -webkit-transition: all 0.4s;
   transition: all 0.4s;
-  box-shadow: 5px 5px 10px #c2d0db, -5px -5px 10px #e5f6ff;
+  -webkit-box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
+          box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
 }
+
 .neu_icon:hover {
   color: #062743;
   font-size: 1.05rem;
-  box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #e5f6ff;
+  -webkit-box-shadow: inset 5px 5px 10px #c2d0db,  inset -5px -5px 10px #e5f6ff;
+          box-shadow: inset 5px 5px 10px #c2d0db,  inset -5px -5px 10px #e5f6ff;
 }
 
 .max_95 {
@@ -78,45 +86,82 @@ body {
 #left_side_bar {
   z-index: 1000 !important;
   border: 0;
+  height: 465px;
+  width: 225px;
   background-color: #daeaf6;
   border-radius: 2rem !important;
-  box-shadow: 8px 8px 20px #aebbc5, -8px -8px 20px #ffffff;
+  -webkit-box-shadow: 8px 8px 20px #aebbc5,  -8px -8px 20px #ffffff;
+          box-shadow: 8px 8px 20px #aebbc5,  -8px -8px 20px #ffffff;
 }
+
 #left_side_bar .side_bar .side_bar_title {
-  padding: 12px 0px 5px 50px;
-  letter-spacing: 0.05em;
+  padding: 12px 50px 5px 50px;
+  letter-spacing: .05em;
   pointer-events: none;
   cursor: default;
-  font-size: 0.7875rem;
+  font-size: .7875rem;
   text-transform: uppercase;
   color: #062743;
   font-weight: 600;
 }
+
 #left_side_bar .side_bar .list-group .side_bar_link {
   color: #062743;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  padding: 10px 0px 10px 50px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 50px 10px 50px;
   font-size: 1rem;
   position: relative;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
   text-decoration: none;
 }
+
 #left_side_bar .side_bar .list-group .fill_d_blue {
   fill: #062743 !important;
   color: #062743;
 }
+
 #left_side_bar .side_bar .list-group :hover {
   background-color: #062743;
   color: #fff !important;
   fill: #fff !important;
   font-size: 1.1rem;
 }
+
 #left_side_bar .side_bar .list-group :active {
   background-color: #062743;
   color: #fff;
   fill: #fff;
 }
 
+/* Overlay effect */
+.overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1199;
+  cursor: pointer;
+}
+
+/* Right-side Main Content */
+#main_content {
+  -ms-flex-preferred-size: 0;
+      flex-basis: 0;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  position: relative;
+  width: 100%;
+}
 /*# sourceMappingURL=style.css.map */
