--- a/attendance/templates/base.html
+++ b/attendance/templates/base.html
@@ -34,6 +34,11 @@
   <!-- Custom Css -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
+  <!-- Bootstrap toggle-->
+  <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+  <!--https://gitbrent.github.io/bootstrap4-toggle/-->
+
   {% block head %}
   {% endblock %}
 </head>
