--- a/attendance/templates/registration/password_change_form.html
+++ b/attendance/templates/registration/password_change_form.html
@@ -1,17 +1,60 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
+{% block title %}
+<title>SAMS | Change Password</title>
+{% endblock %}
+
+{% block head %}
+<style>
+	/* Custom CSS */
+	#id_old_password,
+	#id_new_password1,
+	#id_new_password2 {
+		margin-top: 3px;
+		font-size: 1.1rem;
+		font-family: 'Karla', sans-serif;
+		color: #062743 !important;
+		background-color: #daeaf6 !important;
+		border: 0px;
+		border-radius: 2rem !important;
+		box-shadow: inset 5px 5px 10px #c2d0db,
+			inset -5px -5px 10px #daeaf6;
+	}
+
+	#change_view {
+		background-color: #daeaf6;
+		border-radius: 2rem !important;
+		box-shadow: 8px 8px 16px #aebbc5,
+			-8px -8px 16px #daeaf6;
+	}
+
+	#error_1_id_old_password,
+	#error_1_id_new_password1,
+	#error_1_id_new_password2 {
+		padding: 10px 0px 0px 15px;
+	}
+</style>
+{% endblock %}
+
 {% block content %}
 
-<section class="container">
-	<h2 class="color-slateblue text-center my-3">Change Password</h2>
-	<div class="row px-2 px-md-0">
-		<div class="col-md-6 mx-auto shadow p-3 p-md-4 rounded-lg">
-			<form class="form" method="POST">
-				{% csrf_token %}
-				{{ form|crispy }}
-				<input type="submit" value="Change My Password" class="btn btn-success">
-			</form>
+<section class="row">
+	<div class="col-sm-10 col-md-8 col-lg-5 mx-auto my-3 my-md-0 px-3 p-sm-0">
+		<div class="card border_white p-2 p-md-3" id="change_view">
+			<div class="card-body">
+				<div class="text-center text_d_blue arvo" style="margin-bottom: 35px;">
+					<h3 class="m-0">Change Password</h3>
+				</div>
+				<form method="post" class="form">
+					{% csrf_token %}
+					{{ form|crispy }}
+					<button
+						class="btn btn-block border_white btn-cust neu_icon text_d_blue text-center align-self-center"
+						type="submit">Change My Password
+					</button>
+				</form>
+			</div>
 		</div>
 	</div>
 </section>
