--- a/attendance/static/scss/style.scss
+++ b/attendance/static/scss/style.scss
@@ -49,7 +49,21 @@ body {
 .nav-link{
     color: #062743;                
 }
- 
+
+.btn{    
+    border-radius: 2rem !important;    
+}
+
+/* Customizing Django */
+.asteriskField{
+    color: red !important;
+}
+
+.requiredField{
+    color: #062743;
+    font-size: 1.1rem;
+    font-family: 'arvo';
+}
 
 /* Custom Button */
 /* Mainly for Hamburger Button */
@@ -91,14 +105,14 @@ body {
 #left_side_bar{
     position: relative;
     z-index: 1000;
-    border: 0;
+    border: 1px solid #c9d7e2;
     height: 465px;
     width: 225px;
     transition: 0.5 ease;
     background-color: #daeaf6;
     border-radius: 2rem !important;
     box-shadow:  8px 8px 20px #aebbc5, 
-             -8px -8px 20px #ffffff;
+             -8px -8px 20px #daeaf6;
 
     .side_bar {
 
@@ -205,4 +219,8 @@ body {
     flex-grow: 1;
     position: relative;
     width: 100%;
+}
+
+.border_white{
+    border: 1px solid #c9d7e2;
 }
