--- a/attendance/templates/base.html
+++ b/attendance/templates/base.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +7,7 @@
   {% block title %}
   {% endblock %}
   <meta charset="utf-8">
-  <meta name="theme-color" content="#5e35B1">
+  <meta name="theme-color" content="#daeaf6">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Student Attendance Management System">
   <link rel="icon" type="img/png" href="{% static 'img/profile.png' %}">
@@ -31,14 +30,13 @@
   <!-- Google Fonts : Karla + Arvo -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Karla&display=swap" rel="stylesheet">
-  <!-- Custom Css -->
-  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
   <!-- Bootstrap toggle-->
   <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css"
     rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
   <!--https://gitbrent.github.io/bootstrap4-toggle/-->
-
+  <!-- Custom Css -->
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
   {% block head %}
   {% endblock %}
 </head>
@@ -65,8 +63,8 @@
                     <svg width="1.3em" height="1.3em" viewBox="0 0 320 512" class="bi bi-x" fill="currentColor"
                       xmlns="http://www.w3.org/2000/svg">
                       <path fill="currentColor"
-                        d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
-                        class=""></path>
+                        d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z">
+                      </path>
                     </svg>
                   </a>
                 </span>
@@ -74,7 +72,7 @@
               <li class="side_bar_title list-group mt-3">Account</li>
               {% if user.is_authenticated %}
               <li class="list-group">
-                <a href="{% url 'user_module:logout' %}" class="side_bar_link fill_d_blue">
+                <a href="{% url 'logout' %}" class="side_bar_link fill_d_blue">
                   <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="home" role="img"
                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" width="1.2em" height="1.2em" class="mr-2">
                     <path fill="currentColor"
@@ -86,7 +84,7 @@
               </li>
               {% else %}
               <li class="list-group">
-                <a href="{% url 'user_module:login' %}" class="side_bar_link fill_d_blue">
+                <a href="{% url 'login' %}" class="side_bar_link fill_d_blue">
                   <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="home" role="img"
                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" width="1.2em" height="1.2em" class="mr-2">
                     <path fill="currentColor"
@@ -123,7 +121,7 @@
                       d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z" />
                   </g>
                 </svg>
-                My Account
+                My&nbsp;Account
               </a>
             </li>
             <li class="list-group">
@@ -207,7 +205,7 @@
                     d="M96 224c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm448 0c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm32 32h-64c-17.6 0-33.5 7.1-45.1 18.6 40.3 22.1 68.9 62 75.1 109.4h66c17.7 0 32-14.3 32-32v-32c0-35.3-28.7-64-64-64zm-256 0c61.9 0 112-50.1 112-112S381.9 32 320 32 208 82.1 208 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C179.6 288 128 339.6 128 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zm-223.7-13.4C161.5 263.1 145.6 256 128 256H64c-35.3 0-64 28.7-64 64v32c0 17.7 14.3 32 32 32h65.9c6.3-47.4 34.9-87.3 75.2-109.4z">
                   </path>
                 </svg>
-                About Us
+                About&nbsp;Us
               </a>
             </li>
           </ul>
@@ -215,7 +213,7 @@
         <!-- Overlay Effect -->
         <div class="overlay d-md-none" id="overlay"></div>
         <!-- Main Content Area -->
-        <section id="main_content" class="p-0 mx-2">
+        <section id="main_content" class="p-0 m-2">
           {% block content %}
           {% endblock %}
         </section>
@@ -239,7 +237,7 @@
         if ($window.width() > 767) {
           return $("#left_side_bar").removeClass("animate__slideOutLeft").addClass("d-block");
         }
-        
+        $("#left_side_bar").addClass("animate__slideOutLeft").addClass("d-block");
         // $("#overlay").addClass("d-block").removeClass("d-none");
       }).trigger('resize');
 
