--- a/attendance/templates/registration/password_reset_form.html
+++ b/attendance/templates/registration/password_reset_form.html
@@ -1,13 +1,55 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
+{% block title %}
+<title>SAMS | Password Reset</title>
+{% endblock %}
+
+{% block head %}
+<style>
+  /* Custom CSS */
+  #id_email {
+    margin-top: 3px;
+    font-size: 1.1rem;
+    font-family: 'Karla', sans-serif;
+    color: #062743 !important;
+    background-color: #daeaf6 !important;
+    border: 0px;
+    border-radius: 2rem !important;
+    box-shadow: inset 5px 5px 10px #c2d0db,
+      inset -5px -5px 10px #daeaf6;
+  }
+
+  #reset_view {
+    background-color: #daeaf6;
+    border-radius: 2rem !important;
+    box-shadow: 8px 8px 16px #aebbc5,
+      -8px -8px 16px #daeaf6;
+  }
+
+  #error_1_id_email {
+    padding: 10px 0px 0px 15px;
+  }
+</style>
+{% endblock %}
+
+
 {% block content %}
-<section class="container">
-  <h3 class="text-center">Forgot password</h3>
-  <form method="post" class="form">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Submit</button>
-  </form>
+<section class="row my-5">
+  <div class="col-sm-10 col-md-8 col-lg-5 mx-auto p-3">
+    <div class="card border_white p-2 p-md-3" id="reset_view">
+      <div class="card-body">
+        <div class="text-center text_d_blue arvo" style="margin-bottom: 35px;">
+          <h3 class="m-0">Forgot Password</h3>
+        </div>
+        <form method="post" class="form">
+          {% csrf_token %}
+          {{ form|crispy }}
+          <button type="submit"
+            class="btn btn-block border_white btn-cust neu_icon text_d_blue text-center align-self-center">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
 </section>
 {% endblock %}
