--- a/attendance/templates/registration/password_reset_form.html
+++ b/attendance/templates/registration/password_reset_form.html
@@ -26,10 +26,6 @@
     box-shadow: 8px 8px 16px #aebbc5,
       -8px -8px 16px #daeaf6;
   }
-
-  #error_1_id_email {
-    padding: 10px 0px 0px 15px;
-  }
 </style>
 {% endblock %}
 
@@ -42,7 +38,7 @@
         <div class="text-center text_d_blue arvo" style="margin-bottom: 35px;">
           <h3 class="m-0">Forgot Password</h3>
         </div>
-        <form method="post" class="form">
+        <form method="post" class="form" class="needs-validation" novalidate>
           {% csrf_token %}
           {{ form|crispy }}
           <button type="submit"
