--- a/attendance/static/css/style.css
+++ b/attendance/static/css/style.css
@@ -60,6 +60,10 @@ body {
   font-family: 'arvo';
 }
 
+.invalid-feedback {
+  padding: 10px 0px 0px 15px;
+}
+
 /* Custom Button */
 /* Mainly for Hamburger Button */
 .btn-cust {
@@ -211,7 +215,28 @@ body {
   width: 100%;
 }
 
+/* neumorphism-ui */
 .border_white {
   border: 1px solid #c9d7e2;
+}
+
+.input_cust {
+  margin-top: 3px;
+  font-size: 1.1rem;
+  font-family: 'Karla', sans-serif;
+  color: #062743 !important;
+  background-color: #daeaf6 !important;
+  border: 1px solid #c9d7e2;
+  border-color: #daeaf6 !important;
+  border-radius: 2rem !important;
+  -webkit-box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
+          box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
+}
+
+.body_box_shadow {
+  background-color: #daeaf6;
+  border-radius: 2rem !important;
+  -webkit-box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
+          box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
 }
 /*# sourceMappingURL=style.css.map */
