--- a/attendance/templates/registration/password_change_form.html
+++ b/attendance/templates/registration/password_change_form.html
@@ -28,12 +28,6 @@
 		box-shadow: 8px 8px 16px #aebbc5,
 			-8px -8px 16px #daeaf6;
 	}
-
-	#error_1_id_old_password,
-	#error_1_id_new_password1,
-	#error_1_id_new_password2 {
-		padding: 10px 0px 0px 15px;
-	}
 </style>
 {% endblock %}
 
@@ -46,7 +40,7 @@
 				<div class="text-center text_d_blue arvo" style="margin-bottom: 35px;">
 					<h3 class="m-0">Change Password</h3>
 				</div>
-				<form method="post" class="form">
+				<form method="post" class="form" class="needs-validation" novalidate>
 					{% csrf_token %}
 					{{ form|crispy }}
 					<button
